# gtrack-mini-app

./: CHANGELOG.md  README.md  TECH_SPEC.md  agents.md  api.md  db_schema.md  glossary.md  index.html  main.js  main.py  package-lock.json  package.json  roles_permissions.md  style.css  ux_guidelines.md
__tests__/: drivers.integration.test.js
backend/: .env.example  .gitignore  alembic.ini  main.py  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py
backend/app/db/: seed.py  session.py
backend/app/db/migrations/: README.md  env.py
backend/app/middleware/: auth.py  rbac.py
backend/app/routes/: comments.py  documents.py  drivers.py  lookups.py  reminders.py
backend/app/schemas/: comments.py  common.py  documents.py  drivers.py  lookups.py  reminders.py
backend/app/services/: audit.py  files.py  reminders.py
backend/tests/: conftest.py  test_app_initialisation.py
frontend/: .env.example  index.html  package.json
frontend/src/: App.tsx  styles.css
