[project]
name = "drivers-backend"
version = "0.1.0"
description = "Drivers management backend"
authors = [{name = "GTrack", email = "dev@gtrack.example"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.24",
    "SQLAlchemy>=2.0",
    "alembic>=1.12",
    "pydantic>=2.5",
    "pydantic-settings>=2.0",
    "psycopg[binary]>=3.1",
    "python-multipart>=0.0.7",
    "boto3>=1.28",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4",
    "httpx>=0.25",
    "pytest-asyncio>=0.21",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
